--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ footer_fixed: true
 search_enabled: true
 socials_in_search: true
 posts_in_search: true
-bib_search: true
+bib_search: false # disabled for GitHub Pages compatibility
 
 # Dimensions
 max_width: 930px
@@ -194,20 +194,14 @@ keep_files:
   - CNAME
   - .nojekyll
 
-# Plug-ins
+# Plug-ins (GitHub Pages compatible only)
 plugins:
-  - jekyll-email-protect
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-paginate-v2
-  - jekyll/scholar
-  - jekyll-minifier
-  - jekyll-get-json
-  - jekyll-link-attributes
-  - jekyll-toc
-  - jekyll-tabs
-  - jekyll-regex-replace
-  - jekyll-archives-v2
+  - jekyll-paginate
+  - jekyll-gist
+  - jekyll-github-metadata
+  - jekyll-seo-tag
   - jemoji
 
 # Sitemap settings
@@ -257,72 +251,24 @@ display_categories: ["external-services"] # these categories will be displayed o
 # Jekyll Scholar
 # -----------------------------------------------------------------------------
 
-scholar:
-  last_name: [Zhu]
-  first_name: [Guozhen, G.]
+# Note: Jekyll Scholar plugin is not supported by GitHub Pages
+# Commenting out scholar configuration to prevent build errors
+# scholar:
+#   last_name: [Zhu]
+#   first_name: [Guozhen, G.]
+#   style: apa
+#   locale: en
+#   source: /_bibliography/
+#   bibliography: papers.bib
 
-  style: apa
-  locale: en
+# Publication badges disabled for GitHub Pages compatibility
+# enable_publication_badges:
+#   altmetric: false
+#   dimensions: false
+#   google_scholar: false
+#   inspirehep: false
 
-  source: /_bibliography/
-  bibliography: papers.bib
-  bibliography_template: bib
-  # Note: if you have latex math in your bibtex, the latex filter
-  # preprocessing may conflict with MathJAX if the latter is enabled.
-  # See https://github.com/alshedivat/al-folio/issues/357.
-  bibtex_filters: [latex, smallcaps, superscript]
-
-  replace_strings: true
-  join_strings: true
-
-  details_dir: bibliography
-  details_link: Details
-
-  query: "@*"
-  group_by: year
-  group_order: descending
-
-# Display different badges withs stats for your publications
-# Customize badge behavior in _layouts/bib.liquid
-enable_publication_badges:
-  altmetric: true # Altmetric badge (Customization options: https://badge-docs.altmetric.com/index.html)
-  dimensions: true # Dimensions badge (Customization options: https://badge.dimensions.ai/)
-  google_scholar: true # Google Scholar badge (https://scholar.google.com/intl/en/scholar/citations.html)
-  inspirehep: true # Inspire HEP badge (https://help.inspirehep.net/knowledge-base/citation-metrics/)
-
-# Filter out certain bibtex entry keywords used internally from the bib output
-filtered_bibtex_keywords:
-  [
-    abbr,
-    abstract,
-    additional_info,
-    altmetric,
-    annotation,
-    arxiv,
-    award,
-    award_name,
-    bibtex_show,
-    blog,
-    code,
-    google_scholar_id,
-    html,
-    inspirehep_id,
-    pdf,
-    poster,
-    preview,
-    selected,
-    slides,
-    supp,
-    video,
-    website,
-  ]
-
-# Maximum number of authors to be shown for each publication (more authors are visible on click)
-max_author_limit: 3 # leave blank to always show all authors
-more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
-
-# Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
-enable_publication_thumbnails: true
+# enable_publication_thumbnails: false
 
 # -----------------------------------------------------------------------------
 # Jekyll Link Attributes
