--- a/_config.yml
+++ b/_config.yml
@@ -90,9 +90,9 @@ blog_description: Wireless sensing, AI, and signal processing research
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
-# Pagination
-pagination:
-  enabled: true
+# Pagination (GitHub Pages compatible)
+paginate: 5
+paginate_path: "/blog/page:num/"
 
 related_blog_posts:
   enabled: true
