--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,71 +2,96 @@
   type: map
   contents:
     - name: Full Name
-      value: Guozhen Zhu
-    - name: Email
-      value: gzzhu@terpmail.umd.edu
-    - name: Location
-      value: Rockville, MD, USA
+      value: Albert Einstein
+    - name: Date of Birth
+      value: 14th March 1879
     - name: Languages
-      value: English, Chinese
+      value: English, German
 
 - title: Education
   type: time_table
   contents:
-    - title: Ph.D. in Electrical Engineering
-      institution: University of Maryland, College Park, MD, USA
-      year: 2023
+    - title: PhD
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1905
       description:
-        - ECE Department
-        - Focus on wireless sensing and signal processing
-    - title: M.S. in Electrical Engineering
-      institution: University of Maryland, College Park, MD, USA
-      year: 2022
+        - Description 1.
+        - Description 2.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.
+    - title: Federal teaching diploma
+      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      year: 1900
       description:
-        - ECE Department
-        - Focus on wireless sensing and signal processing
-    - title: B.S. in Electronic Engineering
-      institution: Xidian University, Xi'an, China
-      year: 2019
-      description:
-        - Department of Electronic Engineering
+        - Description 1.
+        - Description 2.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Principal Scientist
-      institution: Origin Wireless AI, Rockville, MD, USA
-      year: 2023 - Present
+    - title: Professor of Theoretical Physics
+      institution: Institute for Advanced Study, Princeton University
+      year: 1933 - 1955
       description:
-        - Working on wireless sensing with K. J. Ray Liu
-        - Research in artificial intelligence and signal processing
-        - Focus on real-world applications of wireless sensing technology
+        - Description 1.
+        - Description 2.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.
+    - title: Visiting Professor
+      institution: California Institute of Technology, Pasadena, California, US
+      year: 1933
+      description:
+        - Description 1.
+        - Description 2.
 
-- title: Research Interests
+    - title: Director
+      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+      year: 1917-1933
+
+    - title: Professor of Theoretical Physics
+      institution: Karl-Ferdinand University, Prague, Czechoslovakia
+      year: 1911 - 1917
+      description:
+
+    - title: Associate Professor of Theoretical Physics
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1909 - 1911
+
+- title: Open Source Projects
+  type: time_table
+  contents:
+    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+      year: 2015-now
+      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+
+- title: Honors and Awards
+  type: time_table
+  contents:
+    - year: 1921
+      items:
+        - Nobel Prize in Physics
+        - Matteucci Medal
+    - year: 2029
+      items:
+        - Max Planck Medal
+
+- title: Academic Interests
   type: nested_list
   contents:
-    - title: Wireless Sensing
+    - title: Topic 1.
       items:
-        - Signal processing for wireless systems
-        - Real-world applications of wireless sensing
-    - title: Artificial Intelligence
+        - Description 1.
+        - Description 2.
+    - title: Topic 2.
       items:
-        - Machine learning applications
-        - AI-driven signal processing
-    - title: Signal and Image Processing
-      items:
-        - Advanced signal processing techniques
-        - Image processing algorithms
-    - title: Internet of Things (IoT)
-      items:
-        - IoT system design and optimization
-        - Connected device technologies
-    - title: Simultaneous Indoor Localization and Mapping (SLAM)
-      items:
-        - Indoor positioning systems
-        - Mapping algorithms
+        - Description 1.
+        - Description 2.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Philosophy:</u> Enjoys cool and artistic research works but believes in solving real-world problems
+    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
